img dimensions added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		
 		<div class="photo-circle">
-			<img src="images/Fitness-Landing-Page_Opt-B_v01_02.jpg" width="100%" height="auto">
+			<img src="images/Fitness-Landing-Page_Opt-B_v01_02.jpg" width="574px" height="599px">
 		</div>
 
 		<div class="blurbs">
